svg icon for birth timeline element and background color changes

--- a/Decapent.Ledger.Front/src/components/app.scss
+++ b/Decapent.Ledger.Front/src/components/app.scss
@@ -1,3 +1,8 @@
 body {
-    background-color: black;
+    background-color: #cadff0;
+
+    .vertical-timeline-element-date {
+        color: rgb(33, 150, 243);
+        font-weight: bold;
+    }
 }
